// {C} Copyright 2018 Pensando Systems Inc. All rights reserved.

syntax = "proto3";

// Service name
package monitoring;

import "google/api/annotations.proto";
import  public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/meta.proto";
import "github.com/pensando/sw/api/protos/events.proto";
import "github.com/pensando/sw/api/fields/selector.proto";
import "export.proto";

// -------------------------- Alert Object -------------------------------------
// Alert is a notification to a user of a fault or condition that needs
// user attention. Alerts are persisted by API Server and are objects.

// Source of an alert; for alerts generated from events, it maps to event.Source
message AlertSource {
  string Component    = 1 [(gogoproto.nullable) = true,
                           (gogoproto.jsontag) = "component, omitempty"];
  string NodeName     = 2 [(gogoproto.nullable) = true,
                           (gogoproto.jsontag) = "node-name, omitempty"];
}

// One of the requirement from the expression that was met
message MatchedRequirement {
  // Requirement from the alert rule that was met
  fields.Requirement Requirement  = 1 [(gogoproto.embed) = true,
                                       (gogoproto.jsontag) = ",inline"];

  // The value at which the requirement was met.
  // same as Requirement.value for operator `Equals` but could vary for other operators
  // e.g. requirement - CPU;Gt;90 could have a matching value 96
  string ObservedValue            = 2 [(gogoproto.nullable) = true,
                                       (gogoproto.jsontag) = "observed-value, omitempty"];
}

// AlertReason captures all the requirements with matched value from the alert policy rule
// at the time of creating an alert.
// e.g. "matched-requirements": [{"field": "cpu", "operator": "Gt", "values": [90], "observed-value": 95}]
message AlertReason {
  // List of requirements from the alert policy with it's matched value
  repeated MatchedRequirement MatchedRequirements = 1 [(gogoproto.nullable) = true,
                                                       (gogoproto.jsontag) = "matched-requirements, omitempty"];

  // Alert Policy ID that matched
  string PolicyID                                 = 2 [(gogoproto.nullable) = true,
                                                       (gogoproto.jsontag) = "alert-policy-id, omitempty"];
}


// AuditInfo captures the user performed the action and the time at which the
// action was performed.
message AuditInfo {
  // Name of the user performed some action.
  string User               = 1 [(gogoproto.nullable) = true,
                                 (gogoproto.jsontag) = "user, omitempty"];

  // Time at which the action was performed.
  api.Timestamp Time        = 2 [(gogoproto.nullable) = true,
                                 (gogoproto.jsontag) = "time, omitempty"];
}

// User can change the state of the alert by changing the spec
message AlertSpec {
  // Possible alert states
  enum AlertState {
    //ui-hint: Open
    OPEN         = 0;
    //ui-hint: Resolved
    RESOLVED     = 1;
    //ui-hint: Acknowledged
    ACKNOWLEDGED = 2;
  }

  string State        = 1 [(gogoproto.nullable) = true,
                           (venice.check) = "StrEnum(AlertSpec.AlertState)",
                           (gogoproto.jsontag) = "state, omitempty"];
}
// Status part of the alert object
message AlertStatus {
  // Severity of an alert
  string Severity                 = 1 [(gogoproto.nullable) = true,
                                       (venice.check) = "StrEnum(.events.SeverityLevel)",
                                       (gogoproto.jsontag) = "severity, omitempty"];

  // Alert source or origin
  AlertSource Source              = 2 [(gogoproto.nullable) = true,
                                       (gogoproto.jsontag) = "source, omitempty"];

  // Event that triggered the alert
  string EventURI                 = 3 [(gogoproto.nullable) = true,
                                       (gogoproto.jsontag) = "event-uri, omitempty"];

  // Affected object
  api.ObjectRef ObjectRef         = 4 [(gogoproto.nullable) = true,
                                       (gogoproto.jsontag) = "object-ref, omitempty"];

  // Message from the alert rule that triggered the alert
  string Message                  = 5 [(gogoproto.nullable) = true,
                                       (gogoproto.jsontag) = "message, omitempty"];

  // Captures all the requirements from the alert policy rule with matched value.
  // All these requirements must be cleared to auto-resolve an alert.
  AlertReason Reason              = 6 [(gogoproto.nullable) = false,
                                       (gogoproto.jsontag) = "reason, omitempty"];

  // Username and time at which the alert was acknowledged
  AuditInfo Acknowledged          = 7 [(gogoproto.nullable) = true,
                                       (gogoproto.jsontag) = "acknowledged, omitempty"];

  // Username and time at which the alert was resolved
  AuditInfo Resolved              = 8 [(gogoproto.nullable) = true,
                                       (gogoproto.jsontag) = "resolved, omitempty"];
}

// Alert defines an alert object
message Alert {
  // KV store prefix
  option (venice.objectPrefix) =  {Collection: "alerts", Path: "/{O.Tenant}"};

  api.TypeMeta T        = 1 [(gogoproto.embed) = true,
                             (gogoproto.nullable) = false,
                             (gogoproto.jsontag) = ",inline"];

  api.ObjectMeta O      = 2 [(gogoproto.embed) = true,
                             (gogoproto.nullable) = false,
                             (gogoproto.jsontag) = "meta, omitempty"];

  AlertSpec Spec        = 3 [(gogoproto.nullable) = false,
                             (gogoproto.jsontag) = "spec, omitempty"];

  AlertStatus Status    = 4 [(gogoproto.nullable) = false,
                             (gogoproto.jsontag) = "status, omitempty"];
}


// -------------------------- Alert Policy Object --------------------------------
// Alert Policy is a user-defined or system-defined policy to generate alerts
// based on the given rule. Users have the ability to select target objects or metrics
// using the `resource` field. Based on the given resource, the rules within the
// policy gets interpreted differently.
//
// -----------------------------------------------------------------------------------------------------------------------
// |  Type         |  Intended for     |     Example alert rule                                                          |
// -----------------------------------------------------------------------------------------------------------------------
// |   Object      |  alerts on the    | Alert unhealthy node status                                                     |
// |               |  managed object   | { ...                                                                           |
// |               |  model            |  "spec": {                                                                      |
// |               |                   |    "resource": "Node",                                                          |
// |               |                   |    "severity": "CRITICAL",                                                      |
// |               |                   |    "message": "Unhealthy node status",                                          |
// |               |                   |    "requirements":[{                                                            |
// |               |                   |      "key": "Spec.AdminState",                                                  |
// |               |                   |      "operator": "Equals",                                                      |
// |               |                   |      "values": ["Healthy"]                                                      |
// |               |                   |    },{                                                                          |
// |               |                   |      "key": "Status.Conditions.OperState",                                      |
// |               |                   |      "operator": "Equals",                                                      |
// |               |                   |      "values": ["Bad"]                                                          |
// |               |                   |    }],                                                                          |
// |               |                   |    "persistence-duration": 60s,                                                 |
// |               |                   |    "clear-duration": 60s,                                                       |
// |               |                   |    "enable": true,                                                              |
// |               |                   |    "auto-resolve": true,                                                        |
// |               |                   |    "destinations": ["email-system-admins"] #name of the alert destinations      |
// |               |                   |  }                                                                              |
// |               |                   | ...                                                                             |
// |               |                   | }                                                                               |
// -----------------------------------------------------------------------------------------------------------------------
// |   Event       |  alert on event   | Convert all node critical events on node to critical alert.                     |
// |               |  object           | Message will be derived from the event.                                         |
// |               |                   | { ...                                                                           |
// |               |                   |  "spec": {                                                                      |
// |               |                   |    "resource": "Event",                                                         |
// |               |                   |    "severity": "CRITICAL",                                                      |
// |               |                   |    "requirements": [{                                                           |
// |               |                   |      "key": "Severity",                                                         |
// |               |                   |      "operator": "Equals",                                                      |
// |               |                   |      "values": ["CRITICAL"]                                                     |
// |               |                   |    }, {                                                                         |
// |               |                   |      "key": "ObjRef.Kind",                                                      |
// |               |                   |      "operator": "Equals",                                                      |
// |               |                   |      "values": ["Node"]                                                         |
// |               |                   |    }],                                                                          |
// |               |                   |    "enable": true,                                                              |
// |               |                   |    "auto-resolve": true,                                                        |
// |               |                   |    "destinations": ["email-system-admins"]  #name of the alert destinations     |
// |               |                   |  }                                                                              |
// |               |                   | ...                                                                             |
// |               |                   | }                                                                               |
// -----------------------------------------------------------------------------------------------------------------------
// |   Metric      |  alerts on the    | // TODO                                                                         |
// |               |  metrics          |                                                                                 |
// -----------------------------------------------------------------------------------------------------------------------
//

message AlertPolicySpec {
  // Resource type - target resource to run this policy.
  // e.g. Network, Endpoint - object based alert policy
  //      Event - event based alert policy
  //      EndpointMetrics - metric based alert policy
  // based on the resource type, the policy gets interpreted.
  string Resource                           = 1 [(gogoproto.jsontag) = "resource, omitempty"];

  // Severity to be set for an alert that gets triggered from this rule
  string Severity                           = 2 [(gogoproto.nullable) = true,
                                                 (venice.check) = "StrEnum(.events.SeverityLevel)",
                                                 (gogoproto.jsontag) = "severity, omitempty"];

  // Message to be used while generating the alert
  // XXX: Event based alerts should not carry a message. It will be derived from the event.
  string Message                            = 3 [(gogoproto.nullable) = true,
                                                 (gogoproto.jsontag) = "message, omitempty"];

  // List of requirements that needs to be met to trigger an alert
  repeated fields.Requirement Requirements  = 4 [(gogoproto.jsontag) = "requirements, omitempty"];

  // Met rule (requirements) needs to sustain for the given duration to qualify to be an alert
  string PersistenceDuration                = 5 [(gogoproto.jsontag) = "persistence-duration, omitempty"];

  // Met rule (requirements) needs to be cleared for the given duration to resolve an alert
  string ClearDuration                      = 6 [(gogoproto.jsontag) = "clear-duration, omitempty"];


  // User can disable the policy by setting this field.
  // Disabled policies will not generate any more alerts but the outstanding ones will remain as is.
  bool Enable                               = 7 [(venice.default) = "true",
                                                 (gogoproto.jsontag) = "enable, omitempty"];

  // If set, the underlying alert will be auto-resolved if the rule that
  // triggered the alert is cleared
  bool AutoResolve                          = 8 [(gogoproto.jsontag) = "auto-resolve, omitempty"];

  // name of the alert destinations to be used to send out notification when an alert
  // gets generated.
  repeated string Destinations              = 9 [(gogoproto.jsontag) = "destinations, omitempty"];
}

message AlertPolicyStatus {
  // Total hits on this policy
  int32 TotalHits            = 1 [(gogoproto.nullable) = true,
                                  (gogoproto.jsontag) = "total-hits, omitempty"];

  // Open alerts based on this policy
  int32 OpenAlerts           = 2 [(gogoproto.nullable) = true,
                                  (gogoproto.jsontag) = "open-alerts, omitempty"];

  // Acknowledged alerts based on this policy
  int32 AcknowledgedAlerts   = 3 [(gogoproto.nullable) = true,
                                  (gogoproto.jsontag) = "acknowledged-alerts, omitempty"];

}

// AlertPolicy - tenant scoped
message AlertPolicy {
  // KV store prefix
  option (venice.objectPrefix) = {Collection: "alertPolicies", Path: "/{O.Tenant}"};

  api.TypeMeta      T          = 1 [(gogoproto.embed) = true,
                                    (gogoproto.nullable) = false,
                                    (gogoproto.jsontag) = ",inline"];

  api.ObjectMeta    O          = 2 [(gogoproto.embed) = true,
                                    (gogoproto.nullable) = false,
                                    (gogoproto.jsontag) = "meta, omitempty"];

  AlertPolicySpec   Spec       = 3 [(gogoproto.nullable) = false,
                                    (gogoproto.jsontag) = "spec, omitempty"];

  AlertPolicyStatus Status     = 4 [(gogoproto.nullable) = false,
                                    (gogoproto.jsontag) = "status, omitempty"];
}


// -------------------------- Alert Destination Object ------------------------
// Alert Destination is a user-defined object which captures the details of all
// the allowed notification mechanisms (Email, SNMP, etc.). These are reusable
// objects in the system and can be used by any of the alert policies.

// Syslog export configuration
message SyslogExport {
    // event export format, SYSLOG_BSD default
    string Format                   = 1 [(venice.check) = "StrEnum(MonitoringExportFormat)",
                                         (gogoproto.jsontag) = "format, omitempty"];

    // export target ip/port/protocol
    repeated ExportConfig Targets    = 2 [(gogoproto.jsontag) = "targets, omitempty"];

    // syslog specific configuration; one of the supported configs
    SyslogExportConfig Config       = 3 [(gogoproto.jsontag) = "config, omitempty"];
}

message SNMPExport {
  // TODO:  format, config
  // SNMP trap destination(s)
  repeated SNMPTrapServer SNMPTrapServers = 1 [(gogoproto.jsontag) = "snmp-trap-servers, omitempty"];
}

message EmailExport {
  // TODO:  format, config, SMTP config
  repeated string EmailList = 1 [(gogoproto.jsontag) = "email-list, omitempty"];
}

message AlertDestinationSpec {
  // export alerts matched by the selector
  fields.Selector Selector      = 1 [(gogoproto.nullable) = true,
                                     (gogoproto.jsontag) = "selector,omitempty"];

  // Email notification
  EmailExport EmailExport       = 2 [(gogoproto.nullable) = true,
                                     (gogoproto.jsontag) = "email-export, omitempty"];

  // SNMP trap destination(s)
  SNMPExport SNMPExport         = 3 [(gogoproto.nullable) = true,
                                     (gogoproto.jsontag) = "snmp-export, omitempty"];

  SyslogExport SyslogExport     = 4 [(gogoproto.nullable) = true,
                                     (gogoproto.jsontag) = "syslog-export, omitempty"];
}

message AlertDestinationStatus {
  // total number of notifications sent using this notification mechanism
  int32 totalNotificationsSent    = 1 [(gogoproto.nullable) = true,
                                       (gogoproto.jsontag) = "total-notifications-sent, omitempty"];
}

// AlertDestination - tenant scoped
message AlertDestination {
  // KV store prefix
  option (venice.objectPrefix)   = {Collection: "alertDestinations", Path: "/{O.Tenant}"};

  api.TypeMeta      T            = 1 [(gogoproto.embed) = true,
                                      (gogoproto.nullable) = false,
                                      (gogoproto.jsontag) = ",inline"];

  api.ObjectMeta    O            = 2 [(gogoproto.embed) = true,
                                      (gogoproto.nullable) = false,
                                      (gogoproto.jsontag) = "meta, omitempty"];

  AlertDestinationSpec   Spec    = 3 [(gogoproto.nullable) = false,
                                      (gogoproto.jsontag) = "spec, omitempty"];

  AlertDestinationStatus Status  = 4 [(gogoproto.nullable) = false,
                                      (gogoproto.jsontag) = "status, omitempty"];
}
